--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resume",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://arunasbend.github.io/arunasbend.github.io",
+  "homepage": "http://arunasbend.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -25,7 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "prep-deploy": "gh-pages -d build",
+    "deploy": "npm run build && npm run prep-deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
