--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prep-deploy": "gh-pages -d build",
+    "prep-deploy": "gh-pages -d build -b master",
     "deploy": "npm run build && npm run prep-deploy"
   },
   "eslintConfig": {
